	like when you do it via the Occupation window).
	Also fixed changing the occupation of the Occupation window.
	Documented (so far) undocumented possibility to edit the labels
	of workspaces on the fly (what use this is, I'm not sure).
	Removed some unused variables.
	[Olaf "Rhialto" Seibert]

   20 - Get rid of the USE_SESSION and X11R6 macros and make them the
	silent default.  Also cleaned out a few references to the macro
	X11R4, which hasn't been used for ages.
	THIS WILL BREAK CTWM ON OLDER (PRE-X11R6) ENVIRONMENTS.
	I strongly recommend an upgrade to a newer X11 release.
	[Richard Levitte]

   21 - Modified the random placement so a negative X displacement has
	the first "random" window start near the right edge instead of
	the right and a negative Y displacement has the first "random"
	window start near the bottom edge instead of the top.
	[Richard Levitte]


    Changes from version 3.8 to xxx
    -------------------------------

    1 - Fix bug causing [de]iconified status of windows to not be
        maintained across workspaces.
        [Matthew Fuller]

    2 - Quite a bunch of compiler warnings.
        [Matthew Fuller]

    3 - Make sure we fully initialize our WorkSpaceWindow structure so
        we don't try to dereference uninitialized pointers later on.
        [Matthew Fuller]

    4 - Increased the number of supported mouse buttons again, having
	just heard of a mouse with 9 possible buttons...
	[Richard Levitte]

    5 - Fix a bug in the warping "next" function, where if there is a
	single window and the cursor is not on it, invoking 'f.warpring
	"next"' does nothing.
	[Martin Blais]

    6 - Introduce a new feature called "SaveWorkspaceFocus", which when
	enabled, makes ctwm remember which window has the focus within
	each virtual workspace. As you switch workspaces, the cursor is
	automatically warped to the window previous in focus in the
	workspace. This significantly reduces the amount of mouse use.
	[Martin Blais]
